--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "blurhash": "^2.0.5",
+    "cdbreact": "^1.5.18",
     "framer-motion": "^10.16.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
