--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.8",
+    "@mui/styled-engine": "^5.14.8",
     "blurhash": "^2.0.5",
     "cdbreact": "^1.5.18",
+    "emailjs": "^4.0.3",
     "framer-motion": "^10.16.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-burger-menu": "^3.0.9",
